# KukarachaChat

./: CMakeLists.txt  Kukaracha.pro  Makefile  README.md  nixpacks.toml
client/: CMakeLists.txt  KukarachaClient  Makefile  client.pro  moc_ChatClient.cpp  moc_MainWindow.cpp
client/android/: AndroidManifest.xml
client/android/res/values/: strings.xml
client/src/: ChatClient.cpp  ChatClient.h  MainWindow.cpp  MainWindow.h  main.cpp
common/: CMakeLists.txt  Makefile  common.pro
common/src/: ChatMessage.cpp  ChatMessage.h  IMessageSerializer.h  JsonMessageSerializer.cpp  JsonMessageSerializer.h
server/: CMakeLists.txt  KukarachaServer  Makefile  moc_ChatServer.cpp  moc_ClientConnection.cpp  moc_predefs.h  server.pro  users.json
server/src/: ChatServer.cpp  ChatServer.h  ClientConnection.cpp  ClientConnection.h  UserStore.cpp  UserStore.h  main.cpp
